# kuka-lwr-ros

./: README.md  dependencies.rosinstall
kuka_lwr/arm_description/: manifest.xml  package.xml
kuka_lwr/arm_description/docs/: urdf_data.ods  urdf_data.xlsx
kuka_lwr/arm_description/launch/: teleop_capsules_slider.launch  teleop_slider.launch
kuka_lwr/arm_description/urdf/: teleop.transmission.xacro  teleop.urdf.xacro  teleop_base.urdf.xacro  teleop_capsules.rviz  teleop_config.urdf.xacro  teleop_robot.urdf.xacro
kuka_lwr/arm_description/urdf/config/: teleop.urdf.xacro  teleop_fixed_base.urdf.xacro  teleop_floating_base.urdf.xacro
kuka_lwr/arm_description/urdf/gazebo/: teleop.gazebo.xacro  teleop_materials.gazebo.xacro
kuka_lwr/arm_description/urdf/parts/: arm.urdf.xacro
kuka_lwr/lwr_controllers/: CMakeLists.txt  lwr_controllers_plugins.xml
kuka_lwr/lwr_controllers/config/: controllers.yaml  hw_interface.yaml  t1_joint_limits.yaml
kuka_lwr/lwr_controllers/src/: cartesian_controller.cpp  joint_controller.cpp  joint_controllers.cpp  kuka_joint_state_controller.cpp  position_controller.cpp
kuka_lwr/lwr_description/model/: kuka_lwr.gazebo.xacro  kuka_lwr.transmission.xacro  kuka_lwr.urdf.xacro
kuka_lwr/lwr_hw/: CMakeLists.txt
kuka_lwr/lwr_hw/include/lwr_hw/: lwr_hw.h  (+1 more)
kuka_lwr/lwr_hw/src/: lwr_hw.cpp  lwr_hw_gazebo_plugin.cpp
kuka_lwr/lwr_launch/launch/: simulation.launch  simulation_arm.launch
kuka_lwr/lwr_ros_interface/src/: ros_joint.cpp
lwr_ros_client/include/lwr_ros_action/: joint_action.h
lwr_ros_client/src/lwr_ros_action/: joint_action.cpp
(+11 files in other folders)
